# Tanwa-7-COM

./: README.md
Tanwa-7-COM-ESP-IDF/: CMakeLists.txt
Tanwa-7-COM-ESP-IDF/components/ads1115/: ads1115.c  ads1115.h
Tanwa-7-COM-ESP-IDF/components/app/: CMakeLists.txt  abort_button.c  abort_button.h  app_init_task.c  app_init_task.h  ble.c  ble.h  can_commands.c  can_commands.h  can_task.c  can_task.h  cmd_commands.c  cmd_commands.h  commands_config.h  devices_config.c  devices_config.h  esp_now_slaves_task.c  esp_now_slaves_task.h  esp_now_task.c  esp_now_task.h  loar_task.c  lora_commands.h  lora_task.c  lora_task.h  lora_task_config.c  lora_task_config.h  measure_task.c  measure_task.h  memory_task.c  memory_task.h  mission_timer_config.c  mission_timer_config.h  now_commands.c  now_commands.h  sd_task.c  sd_task.h  slave_com.c  slave_com.h  state_machine_config.c  state_machine_config.h  (+4 more)
Tanwa-7-COM-ESP-IDF/components/cli/: CMakeLists.txt  console.c  (+3 more)
Tanwa-7-COM-ESP-IDF/components/mcu_config/: CMakeLists.txt  lora_esp32_config.c  lora_esp32_config.h  mcu_adc_config.c  mcu_adc_config.h  mcu_gpio_config.c  mcu_gpio_config.h  mcu_i2c_config.c  mcu_i2c_config.h  mcu_memory_config.c  mcu_memory_config.h  mcu_misc_config.c  mcu_misc_config.h  mcu_spi_config.c  mcu_spi_config.h  mcu_twai_config.c  mcu_twai_config.h
Tanwa-7-COM-ESP-IDF/components/mcu_config/test/: CMakeLists.txt  test_lora_esp32_config.c  test_mcu_adc_config.c  test_mcu_memory_config.c  test_mcu_spi_config.c  test_mcu_twai_config.c
Tanwa-7-COM-ESP-IDF/main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+95 files in other folders)
